--- a/PreOrclFrontEnd/Views/Home/Index.cshtml
+++ b/PreOrclFrontEnd/Views/Home/Index.cshtml
@@ -69,8 +69,8 @@
                             </div>
                             <div class="stat-content">
                                 <div class="text-left dib">
-                                    <div class="stat-text"><span class="count">2986</span></div>
-                                    <div class="stat-heading">Clients</div>
+                                    <div class="stat-text"><span class="count">@ViewBag.Cantidad</span></div>
+                                    <div class="stat-heading">Personas</div>
                                 </div>
                             </div>
                         </div>
